# WebtronicsTestTask

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: TaskDescription.md
src/webtronics/: alembic.ini
src/webtronics/api/: appbuilder.py  entrypoint.py  exceptions.py
src/webtronics/api/adapters/: emailhunter.py  repo.py
src/webtronics/api/helpers/: auth.py  jwt.py  misc.py  poster.py  repo.py  verifier.py
src/webtronics/api/interfaces/: __init__.py  jwt.py  repo.py  verifier.py
src/webtronics/api/routers/: __init__.py  posts.py  users.py
src/webtronics/api/schemas/: posts.py  users.py
src/webtronics/api/stubs/: __init__.py  auth.py  jwt.py  poster.py  repo.py  verifier.py
src/webtronics/db/: entrypoint.py
src/webtronics/db/alembic/: env.py
src/webtronics/db/alembic/versions/: 943f3dbe95ab_initial.py  a3c4050fb8c0_add_reactions.py  af4d214f3013_remove_unique_constrait_on_username.py  b665c966c4a8_add_posts.py  faa304d550c4_add_cascade.py
src/webtronics/db/models/: __init__.py  models.py
src/webtronics/tests/: .env  conftest.py  docker-compose.yaml  entrypoint.py
src/webtronics/tests/e2e/: test_app.py  test_build.py
src/webtronics/tests/unit/adapters/: test_repo.py
src/webtronics/tests/unit/helpers/: test_auth.py  test_jwt.py  test_misc.py  test_poster.py
src/webtronics/tests/unit/stubs/: test_auth.py  test_get_current_user.py  test_jwt.py  test_poster.py  test_repo.py
