[tool.poetry]
name = "webtronics"
version = "0.1.0"
description = ""
authors = ["nekone <nekonekun@gmail.com>"]
readme = "README.md"
packages = [{include = "webtronics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.18"}
alembic = "^1.11.1"
asyncpg = "^0.28.0"
typer = "^0.9.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ruff = "^0.0.277"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wt-db = "webtronics.db.entrypoint:main"
wt-api = "webtronics.api.entrypoint:main"
wt-test = "webtronics.tests.entrypoint:main"

[tool.ruff]
select = ["F", "E", "W", "R", "C", "B", "I", "N", "UP", "SIM", "RUF"]